force-app/main/default/objects/Transacao__c/Transacao__c.object-meta.xml
<CustomObject>
    <description>Transação Saque , Depósitos , Transferências, Pagamento e Recebimentos de Ordens</description>
    <label>Transação</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Código da Transação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>