force-app/main/default/objects/Transacao__c/fields/CarteiraInvestimentos__c.field-meta.xml
<CustomField>
    <fullName>CarteiraInvestimentos__c</fullName>
    <description>Relacionamento entre transação e carteira de Investimentos</description>
    <inlineHelpText>Relacionamento entre transação e carteira de Investimentos</inlineHelpText>
    <label>Carteira de Investimentos</label>
    <referenceTo>CarteiraInvestimentos__c</referenceTo>
    <relationshipLabel>Transações</relationshipLabel>
    <relationshipName>Transacoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>