force-app/main/default/objects/Transacao__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Depósito</fullName>
            </value>
            <value>
                <fullName>Saque</fullName>
            </value>
            <value>
                <fullName>Transferência Realizada</fullName>
            </value>
            <value>
                <fullName>Pagamento de Ordem</fullName>
            </value>
            <value>
                <fullName>Recebimento de Ordem</fullName>
            </value>
            <value>
                <fullName>Tranferência Recebida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>