force-app/main/default/objects/Transacao__c/fields/ValorContabil__c.field-meta.xml
<CustomField>
    <fullName>ValorContabil__c</fullName>
    <description>Informa se o operação credita ou debita o valor na conta</description>
    <formula>IF( ISPICKVAL( Tipo__c ,&quot;Saque&quot; ) || ISPICKVAL( Tipo__c ,&quot;Pagamento de Ordem&quot; ) || ISPICKVAL( Tipo__c ,&quot;Transferência Realizada&quot; ),
 Valor__c * -1,
 Valor__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Informa se o operação credita ou debita o valor na conta</inlineHelpText>
    <label>Valor Contábil</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>