force-app/main/default/objects/Transacao__c/validationRules/Saldo_Insuficiente.validationRule-meta.xml
<ValidationRule>
    <fullName>Saldo_Insuficiente</fullName>
    <active>true</active>
    <description>Não permite que operações de débitos sejam realizadas se não houver saldo</description>
    <errorConditionFormula>IF(
 (ISPICKVAL(Tipo__c, &quot;Saque&quot;) || ISPICKVAL(Tipo__c, &quot;Transferência Realizada&quot;)) &amp;&amp; Valor__c &gt;  CarteiraInvestimentos__r.Saldo__c , 
true, 
false
)</errorConditionFormula>
    <errorMessage>Não há saldo o suficiente para realizar a operação solicitada</errorMessage>
</ValidationRule>